test/spec_vectors/simd_i16x8_cmp/fail/module_19.wat
(module (func $i16x8.lt_u-arg-empty (result v128) (i16x8.lt_u)))